--- a/index.html
+++ b/index.html
@@ -126,18 +126,27 @@
          <!-- <img src="./pictures/teamwork-result-sci-contest.jpg" alt="Awarded first place and a gold medal for achieving the  -->
          <!-- highest score in the competition." width="100"/> -->
       </section>
+
       <section  id="Education"  aria-labelledby="111" >
-         <div>
+         <div id="title-ed">
+            <div>
          <h2 id="111">Education</h2>
-         <p>Princess Chulabhorn Science High School Lopburi <br /><span>2021-2024</span></p>
+            </div>
+         </div>
+      <div id="jorpor" class="grid-6">
+         <img class="span-2" src="./pictures/pccl school emblem.png" alt="school emblem of Princess Chulabhorn Science High Scool Lopburi" width="100px"/>
+         <p class="span-4">Princess Chulabhorn Science High School Lopburi <br /><span >2021-2024</span></p>
          <!-- <img src="./pictures/jorpor-end.jpg" alt="Posing with a graduation certificate in hand, with Princess Chulabhorn Science  -->
          <!-- High School Lopburi as the backdrop" width="100px"/> -->
-         <p id="SCIUS">SCIENCE CLASSROOMS IN UNIVERSITY- AFFILIATED SCHOOL PROJECT (SCIUS)
-            Thammasat University-Suankularb Wittayalai Rangsit School
-            <span>2024-Present</span></p>
+      </div>
+         <div id="jorpor" class="grid-6">
+         <img class="span-2" src="./pictures/scius school emblem.png" alt="school emblem of Princess Chulabhorn Science High Scool Lopburi" width="100px"/>
+         <p  class="span-4" >SCIENCE CLASSROOMS IN UNIVERSITY- AFFILIATED SCHOOL PROJECT (SCIUS) 
+             <br /><span>Thammasat University-Suankularb Wittayalai Rangsit School</span><br/><span >2024-present</span></p>
+
+         </div>
          <!-- <img src="./pictures/skr.jpg" alt="A formal front-facing photograph in the school uniform of Suankularb Wittayalai -->
           <!-- Rangsit School." width="100px"/> -->
-         </div>
       </section>
 
 
@@ -194,10 +203,11 @@
             </div>
          </div> 
          <div class="actpho">
-             <img src="./pictures/hackathon-photome.jpg" alt="Photograph of Mr. Phorlamace Wiangchan during a Hackathon workshop
+             <img src="./pictures/hackathon-cert.jpg" alt="Participated in a business model workshop during a Hackathon event,
+              where ideas were collaboratively developed using multiple Post-it notes." width="100px"/>
+              <img src="./pictures/hackathon-photome.jpg" alt="Photograph of Mr. Phorlamace Wiangchan during a Hackathon workshop
              , with the event's workshop setting in the background." width="100px"/>
-             <!-- <img src="./pictures/hackathon-messy.jpg" alt="Participated in a business model workshop during a Hackathon event, -->
-              <!-- where ideas were collaboratively developed using multiple Post-it notes." width="100px"/> -->
+             
             </div> 
          </div>
 
@@ -216,7 +226,7 @@
          <div class="actpho">
                   <img  src="./pictures/j-knowledge-certi.jpg" alt="Received a certificate for completing the Engineering Camp 2023, 
                   a preparatory program for engineering studies." width="100px"/> 
-                  <img  src="./pictures/j-knowledge-multimeter.jpg" alt="An electrical workshop focusing on practicing the use of a 
+                  <img  src="./pictures/circuit-photome.jpg" alt="An electrical workshop focusing on practicing the use of a 
                   multimeter to measure various electrical quantities." width="100px"/>
                </div> 
             </div>
@@ -231,9 +241,9 @@
                </div>
             </div> 
             <div class="actpho">
-              <img src="./pictures/cubesat-photome.jpg" alt="Observing the output of an Arduino board after uploading custom code."
+              <img src="./pictures/cubesat-cert.jpg" alt="Observing the output of an Arduino board after uploading custom code."
              width="100px"/>
-              <img src="./pictures/cubesat-crowded.jpg" alt="Captured while collaborating with teammates to review and debug code 
+              <img src="./pictures/cubesat-photome.jpg" alt="Captured while collaborating with teammates to review and debug code 
              during a project session." width="100px"/>
             </div> 
          </div>
@@ -261,14 +271,22 @@
 
       <section id="Project" aria-labelledby="444" class="grid-6">
          <h2 id="444">Project</h2>
-         <div class="span-3" id="p1">
+           <div class="span-3" id="p1">
+            <div>
             <h3>Mathematics Graduation Project: Visualizing the Pythagorean Theorem</h3>
-            <p>This project aimed to deepen students'understanding of the Pythagorean Theorem by simulating volume-based 
-            demonstrations using liquids. The goal 
-            was to present a tangible, visual way to comprehend the concept, enhancing both intuition and engagement in
-             learning mathematics.</p>
+            <p>This project explores an alternative approach to proving the Pythagorean Theorem by simulating the measurement of liquid volumes. 
+               A physical model was constructed using a right-angled triangular prism and three square prisms, each with side lengths equal to the 
+               three sides of the triangle. The square prisms were attached to the three faces of the triangular prism corresponding to the triangle’s 
+               sides, and holes were created between them to allow liquid transfer. Colored water was first poured into the square prism with the longest
+                side (representing the hypotenuse). The model was then rotated so that the liquid could flow into the two smaller square prisms (representing 
+                the legs of the triangle). The volumes of the colored water collected in these two prisms were then summed and compared with the original volume 
+                in the largest prism. When the total volume in the two smaller prisms equaled that of the largest prism, it served as a physical verification of 
+                the Pythagorean Theorem.</p>
+            </div>
+            <div>
              <img src="./pictures/sci-project-presentation.jpg" alt="A photo of Mr. Phorlamace Wieangchan presenting my project to the committee."
               width="100px"/>
+            </div>
             </div>
 
          <img class="span-3"  src="./pictures/sci-project-poster.jpg" alt="A poster for a mathematics project to prove the Pythagorean 
@@ -281,14 +299,15 @@
    </main>
    <footer>
       <section aria-labelledby="Contact" id="concept">
-      <h2 id="Contact">Contact</h2>
-         <ul>
+      <h2 id="Contact">Contact </h2>
+      <ul>
          <li><a href="mailto:Porames200762@gmail.com">Gmail: Porames200762@gmail.com</a></li>
          <li><a href="tel:+66982369083">Tel:098-2369083</a></li>
          <li><a>Line: porames200762</a></li>
+         <li><a href="https://www.instagram.com/_fr.eek/" target="_blank">IG:_fr.eek</a></li>
       </ul>
       </section>
-      <a href="https://www.flaticon.com/free-icons/physics" title="physics icons" target="_blank">Physics icons created by 
+      <a id="real-life" href="https://www.flaticon.com/free-icons/physics" title="physics icons" target="_blank">Physics icons created by 
          Good Ware - Flaticon</a>
    </footer>
     
